--- a/mater-play-frontend/package.json
+++ b/mater-play-frontend/package.json
@@ -15,10 +15,14 @@
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.1.0",
     "@mui/material": "^6.1.0",
+    "@nestjs/config": "^3.3.0",
+    "@nestjs/typeorm": "^10.0.2",
     "axios": "^1.7.7",
+    "pg": "^8.13.1",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
